@@ -3,17 +3,17 @@ Test clearstatcache() function: error conditions
 --FILE--
 <?php
 /*
-   Prototype: void clearstatcache (void);
+   Prototype: void clearstatcache ([bool clear_realpath_cache[, filename]]);
    Description: clears files status cache
 */
 
 echo "*** Testing clearstatcache() function: error conditions ***\n";
-var_dump( clearstatcache("file") );  //No.of args more than expected
+var_dump( clearstatcache(0, "/foo/bar", 1) );  //No.of args more than expected
 echo "*** Done ***\n";
 ?>
 --EXPECTF--
 *** Testing clearstatcache() function: error conditions ***
 
-Warning: clearstatcache() expects exactly 0 parameters, 1 given in %s on line %d
+Warning: clearstatcache() expects at most 2 parameters, 3 given in %s on line %d
 NULL
 *** Done ***
